syntax = "proto3";
package pb;

service TodoService {
    rpc List(Blank) returns (TodoList) {}
    rpc Insert(NewItem) returns (TodoItem) {}
    rpc Mark(TodoItemId) returns (TodoItem) {}
}

message Blank {}

message TodoItemId {
    int32 id = 1;
    bool checked = 2;
}

message NewItem {
    string task = 1;
}

message TodoItem {
    int32 id = 1;
    bool done = 2;
    string task = 3;
}

message TodoList {
    repeated TodoItem todoItem = 1;
}